--- a/src/app/views/admin/admin.component.html
+++ b/src/app/views/admin/admin.component.html
@@ -1,4 +1,4 @@
 <!-- <app-navbar></app-navbar> -->
 <app-sidebar [options]="optionsOfSidebar" [table]="adminTable" (userUpdate)="pasoAlgoEnSidebar($event)"></app-sidebar>
-<!-- <router-outlet></router-outlet> -->
+<router-outlet></router-outlet>
 <!-- <app-footbar></app-footbar> -->
