--- a/src/app/components/navigation/sidebar/sidebar.component.html
+++ b/src/app/components/navigation/sidebar/sidebar.component.html
@@ -6,17 +6,22 @@
 
 <table class="table">
     <thead>
-      <tr>
-          <th scope="col" *ngFor="let head of table.heads">{{head}}</th>
-      </tr>
+        <tr>
+            <th scope="col" *ngFor="let head of table.heads">{{head}}</th>
+            <th scope="col" *ngIf="table.options">Opciones</th>
+        </tr>
     </thead>
     <tbody>
         <tr *ngFor="let row of table.rows">
             <td *ngFor="let rowValue of row.values">
                 {{rowValue}}
             </td>
+            <td *ngFor="let option of table.options">
+                <a *ngIf="option.type == 'redirection'" [href]="option.path">{{option.title}}</a>
+                <input *ngIf="option.type == 'button'" type="button" [value]="option.title" (click)="option.click()">
+            </td>
         </tr>
     </tbody>
-  </table>
+</table>
 
-  <input type="button" placeholder="Hola papa" (click)="holaPapa()">
+<input type="button" placeholder="Hola papa" (click)="holaPapa()">
